# lintshell

./: .gitignore  .merlin  .travis.yml  Dockerfile  META  Makefile  Makefile~  README.md  _tags  _tags~  lintshell.opam
docs/: analyzers.md  how-to-write-a-lintshell-analyzer.md  quoting-find.md  redirections-inverted.md  variables-parameters.md
docs/template/: checkSomething.ml  dune
docs/template/tests/: lint-tests-something-wrong.sh
plugins/quoting/find/: Makefile  Makefile~  _tags  checkQuotingFind.ml  checkQuotingFind.ml~
src/: .merlin~  alarm.ml  analyzer.ml  analyzer.mli  analyzer.ml~  dune  extStd.ml  lintshell.ml  lintshell.ml~  lintshell_cmd.ml  plugin.ml~  todo.org  todo.org~
src/plugins/builtins/return/: checkReturnOutsideFunctionBody.ml  dune
src/plugins/builtins/return/tests/: lint-tests-return-outside-function.sh.json  lint-tests-return-outside-function.sh.sjson
src/plugins/quoting/find/: checkQuotingFind.ml  dune
src/plugins/quoting/find/tests/: lint-tests-find-patterns-not-quoted.sh  lint-tests-only-find-patterns-not-quoted.sh
src/plugins/redirections/crossing/: checkCrossingRedirections.ml  dune
src/plugins/redirections/inverted/: checkInvertedRedirections.ml  dune
src/plugins/variables/parameters/: checkParametersValidity.ml  dune
src/plugins/variables/parameters/tests/: lint-tests-unspecified-variable-parameters.sh
tools/: make-docs.sh
