(library
 (name lintshell)
 (public_name lintshell)
 (libraries morbig)
 (modules :standard \ Lintshell_cmd))

(executable
 (name lintshell_cmd)
 (public_name lintshell)
 (libraries morbig unix ppx_deriving_yojson.runtime lintshell findlib.dynload findlib)
 (modules Lintshell_cmd)
 (flags :standard -w -33))
